--- a/view/biblionumber-support/index/redirect.phtml
+++ b/view/biblionumber-support/index/redirect.phtml
@@ -1,9 +1,6 @@
 <?php
 $escapeHtml = $this->plugin('escapeHtml');?>
 
-<p>
-    <?php echo $this->translate('Item not found with biblionumber field : ')?>
-    <em><?php echo $biblionumber ?></em>
-</p>
+<p>Vous n'avez pas les droits pour consulter ce document</p>
 
 <a href="<?php echo $this->url('site', [], true); ?>"><button><?php echo $this->translate('Back to homepage') ?></button></a>
